--- a/graphs/dsu.html
+++ b/graphs/dsu.html
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">11.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">12.</strong> Dijkstra</a></li><li class="chapter-item expanded "><a href="../graphs/dsu.html" class="active"><strong aria-hidden="true">13.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">14.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">15.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">16.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">17.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">18.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">19.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">20.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">21.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">22.</strong> Mo's</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">23.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">24.</strong> Macros</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">25.</strong> Zero/One Trait (Deprecated)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">11.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">12.</strong> Dijkstra</a></li><li class="chapter-item expanded "><a href="../graphs/dsu.html" class="active"><strong aria-hidden="true">13.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/wdsu.html"><strong aria-hidden="true">13.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">14.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">15.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">16.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">17.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">18.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">19.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">20.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">21.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">22.</strong> Mo's</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">23.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">24.</strong> Macros</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">25.</strong> Zero/One Trait (Deprecated)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -140,78 +140,101 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="disjoint-set-union"><a class="header" href="#disjoint-set-union">Disjoint Set Union</a></h1>
-<p>Disjoint set union (a.k.a Union-Find) processes the following queries on a graph with \(n\) nodes without any edges:</p>
-<ul>
-<li>Add an undirected edge between two nodes (<code>union</code>)</li>
-<li>Determine if there exist a path between two nodes (<code>is_reachable</code>)</li>
-</ul>
+<p>Disjoint set union data structure.</p>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">struct UnionFind {
+</span><span class="boring">    n: usize,
+</span><span class="boring">    parent: Vec&lt;usize&gt;,
+</span><span class="boring">    group_num: usize,
+</span><span class="boring">    group_size: Vec&lt;usize&gt;,
+</span><span class="boring">}
+</span><span class="boring">impl UnionFind {
+</span><span class="boring">    fn new(n: usize) -&gt; Self {
+</span><span class="boring">        Self {
+</span><span class="boring">            n,
+</span><span class="boring">            parent: vec![n; n],
+</span><span class="boring">            group_num: n,
+</span><span class="boring">            group_size: vec![1; n],
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">    fn find(&amp;mut self, u: usize) -&gt; usize {
+</span><span class="boring">        let par = self.parent[u];
+</span><span class="boring">        if par == self.n {
+</span><span class="boring">            return u;
+</span><span class="boring">        }
+</span><span class="boring">        self.parent[u] = self.find(par);
+</span><span class="boring">        self.parent[u]
+</span><span class="boring">    }
+</span><span class="boring">    fn is_differ(&amp;mut self, u: usize, v: usize) -&gt; bool {
+</span><span class="boring">        self.find(u) != self.find(v)
+</span><span class="boring">    }
+</span><span class="boring">    fn union(&amp;mut self, u: usize, v: usize) {
+</span><span class="boring">        let (ur, vr) = (self.find(u), self.find(v));
+</span><span class="boring">        if ur != vr {
+</span><span class="boring">            self.parent[vr] = ur;
+</span><span class="boring">            self.group_size[ur] += self.group_size[vr];
+</span><span class="boring">            self.group_num -= 1;
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">    fn get_group_size(&amp;mut self, u: usize) -&gt; usize {
+</span><span class="boring">        let r = self.find(u);
+</span><span class="boring">        self.group_size[r]
+</span><span class="boring">    }
+</span><span class="boring">}
+</span><span class="boring">fn main() {
+</span>let mut uf = UnionFind::new(10);
+println!(&quot;{}&quot;, uf.is_differ(2, 6)); // true
+uf.union(2, 6);
+println!(&quot;{}&quot;, uf.is_differ(2, 6)); // false
+<span class="boring">}</span></code></pre></pre>
+<h2 id="code"><a class="header" href="#code">Code</a></h2>
 <pre><code class="language-rust noplayground">struct UnionFind {
-    size: usize,
-    parents: Vec&lt;usize&gt;,
-    group_size: Vec&lt;usize&gt;,
+    n: usize,
+    parent: Vec&lt;usize&gt;,
     group_num: usize,
+    group_size: Vec&lt;usize&gt;,
 }
 
 impl UnionFind {
-    /// Returns a new UnionFind instance where `size` number of elements are in their own disjoint set.
-    fn new(size: usize) -&gt; Self {
+    fn new(n: usize) -&gt; Self {
         Self {
-            size,
-            parents: vec![size; size],
-            group_size: vec![1; size],
-            group_num: size,
+            n,
+            parent: vec![n; n],
+            group_num: n,
+            group_size: vec![1; n],
         }
     }
 
-    /// Returns the number of nodes which can be reached from x.
-    fn get_group_size(&amp;mut self, x: usize) -&gt; usize {
-        let root = self.find_root(x);
-        self.group_size[root]
-    }
-
-    /// Returns the number of connected components.
-    fn get_group_num(&amp;self) -&gt; usize {
-        self.group_num
-    }
-
-    fn find_root(&amp;mut self, x: usize) -&gt; usize {
-        if self.parents[x] == self.size {
-            return x;
+    /// Returns the root of a group u is in
+    fn find(&amp;mut self, u: usize) -&gt; usize {
+        let par = self.parent[u];
+        if par == self.n {
+            return u;
         }
-        let root = self.find_root(self.parents[x]);
-        self.parents[x] = root;
-        root
+        self.parent[u] = self.find(par);
+        self.parent[u]
     }
 
-    /// Returns true if there exists a path from a to b.
-    fn is_reachable(&amp;mut self, a: usize, b: usize) -&gt; bool {
-        self.find_root(a) == self.find_root(b)
+    /// Returns true if u and v are in different groups, false otherwise.
+    fn is_differ(&amp;mut self, u: usize, v: usize) -&gt; bool {
+        self.find(u) != self.find(v)
     }
 
-    /// Add an edge between a and b.
-    fn union(&amp;mut self, a: usize, b: usize) {
-        let a_root = self.find_root(a);
-        let b_root = self.find_root(b);
-
-        if a_root != b_root {
+    /// The group of v is merged into the group of u
+    fn union(&amp;mut self, u: usize, v: usize) {
+        let (ur, vr) = (self.find(u), self.find(v));
+        if ur != vr {
+            self.parent[vr] = ur;
+            self.group_size[ur] += self.group_size[vr];
             self.group_num -= 1;
-            let a_size = self.group_size[a_root];
-            let b_size = self.group_size[b_root];
-            if a_size &lt; b_size {
-                self.parents[a_root] = b_root;
-                self.group_size[b_root] += a_size;
-            } else {
-                self.parents[b_root] = a_root;
-                self.group_size[a_root] += b_size;
-            }
         }
+    }
+
+    fn get_group_size(&amp;mut self, u: usize) -&gt; usize {
+        let r = self.find(u);
+        self.group_size[r]
     }
 }</code></pre>
-<h2 id="example"><a class="header" href="#example">Example</a></h2>
-<pre><code class="language-rust noplayground">let mut uf = UnionFind::new(10);
-assert_eq!(uf.is_reachable(2, 6), false);
-uf.union(2, 6);
-assert_eq!(uf.is_reachable(2, 6), true);</code></pre>
 
                     </main>
 
@@ -220,7 +243,7 @@ assert_eq!(uf.is_reachable(2, 6), true);</code></pre>
                             <a rel="prev" href="../graphs/dijkstra.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../graphs/scc.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../graphs/wdsu.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -232,7 +255,7 @@ assert_eq!(uf.is_reachable(2, 6), true);</code></pre>
                     <a rel="prev" href="../graphs/dijkstra.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../graphs/scc.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../graphs/wdsu.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
